[package]
name = "basketball-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
serde = "1.0.132"
serde_derive = "1.0.132"
reqwest = { version = "0.11.7", features = ["blocking", "json"] }